# structural-codec

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: authoring.rs  codec.rs  conformance.rs  disjoint.rs  encoded_form.rs  error.rs  evaluator.rs  fixture.rs  form.rs  ids.rs  lib.rs  table.rs  textual_form.rs  value.rs  writer.rs
tests/: conformance_harness.rs  disjointness.rs  encoded_form.rs  evaluator_behavior.rs  laws.rs  normalization.rs
